[package]
name = "inkstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkstone-syn = { path = "crates/syn" }
inkstone-codegen = { path = "crates/codegen" }
inkstone-vm = { path = "crates/vm" }

clap = { version = "3.0.0-rc.4", features = ["derive"] }
text_lines = "0.4.1"
unicode-width = "0.1.9"

[workspace]
members = [".", "crates/*"]
