[package]
name = "inkstone-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkstone-bytecode = { path = "../bytecode" }
inkstone-syn = { path = "../syn" }

smol_str = "0.1.18"
rowan = "0.14.1"
fnv = "1"
vec1 = "1.8"
petgraph = "0.6"
itertools = "0.10"
tracing = "0.1.28"


[dev-dependencies]
test-env-log = { version = "0.2.7", features = [
    "trace",
], default-features = false }
tracing-subscriber = "0.3.3"

pretty_assertions = "1"
colored-diff = "0.2.2"
expect-test = "1.1"
