[package]
name = "inkstone-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkstone-bytecode = { path = "../inkstone-bytecode" }
inkstone-syn = { path = "../inkstone-syn" }

smol_str = "0.1.18"
rowan = "0.14.1"
fnv = "1"
vec1 = "1.8"
petgraph = "0.6"
itertools = "0.10"
