[package]
name = "inkstone-syn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.1"
logos = "0.12.0"
enum-ordinalize = "3"
rowan = "0.14.0"
scopeguard = "1.1"

[dev-dependencies]
pretty_assertions = "1"
colored-diff = "0.2.2"
expect-test = "1.1"
