[package]
name = "inkstone-syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
enum-ordinalize = "3"
rowan = "0.14.1"
scopeguard = "1.1"
tracing = "0.1.28"

[dev-dependencies]
pretty_assertions = "1"
colored-diff = "0.2.2"
expect-test = "1.1"
test-env-log = { version = "0.2.7", features = [
    "trace",
], default-features = false }
tracing-subscriber = "0.2.24"
