[package]
name = "inkstone-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
smol_str = "0.1.18"
modular-bitfield = "0.11"
slotmap = "1"
static_assertions = "1"
vtable = "0.1"
itertools = "0.10"

mimalloc-rust-sys = "1.7.2"

inkstone-bytecode = { path = "../bytecode" }
inkstone-util = { path = "../util" }
